# fastapi-cli

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
src/: __init__.py  database.py  settings.py
